Warpsmith refactoring, Frag Grenade tier 1

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -93,4 +93,5 @@
     <entry name="ChaosSpaceMarines/DeathEcstasyDescription" value="Sacrifices adjacent unit to fully restore Lord's health and morale of nearby units. Temporary increases Lord's damage output."/>
     <entry name="ChaosSpaceMarines/DeathEcstasyFlavor" value="Death is but another thrilling experience, and the Emperor’s Children are loathe to deny the enemy such vistas of ecstatic sensation."/>
 	<entry name="ChaosSpaceMarines/IconOfDespairDescription" value="Icon of Chaos that increases the melee damage reduction to a unit with Mark of Nurgle."/>
+	<entry name="ChaosSpaceMarines/ShatterDefencesDescription" value="Reduces movement and armour of target enemy vehicle or fortification."/>
 </language>
