--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -194,4 +194,5 @@
 	<entry name="ChaosSpaceMarines/BloatedWithLifestealDescription" value="Restores hitpoints on hit."/>
 	<entry name="ChaosSpaceMarines/BloatedWithLifestealFlavor" value="Though Nurgle’s cursed diseases rot a man both physically and spiritually, they also imbue their subjects decaying flesh with inhuman resilience. To such bloated forms, spreading their pox can often bring with it minor blessings from the plague God."/>
 	<entry name="ChaosSpaceMarines/IconOfDespairDescription" value="Increases the melee damage reduction."/>
+	<entry name="ChaosSpaceMarines/ShatterDefencesDescription" value="Reduces armour and movement."/>
 </language>
